# ur5_test

./: frames_2026-05-06_09.42.18.gv  frames_2026-05-12_10.50.56.gv  frames_2026-05-12_10.57.11.gv  pyvenv.cfg
install/: local_setup.sh  setup.sh
install/robotiq_hande_description/share/robotiq_hande_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_hande_description/share/robotiq_hande_description/cmake/: robotiq_hande_descriptionConfig-version.cmake  robotiq_hande_descriptionConfig.cmake
install/robotiq_hande_description/share/robotiq_hande_description/environment/: ament_prefix_path.dsv  path.dsv
install/robotiq_hande_description/share/robotiq_hande_description/launch/: display.launch.py
install/robotiq_hande_description/share/robotiq_hande_description/meshes/: finger.dae  finger_collision.dae  hande.dae  io_coupler.dae
install/robotiq_hande_description/share/robotiq_hande_description/rviz/: urdf.rviz
install/robotiq_hande_description/share/robotiq_hande_description/urdf/: cylinder_inertial.xacro  robotiq_hande_gripper.ros2_control.xacro  robotiq_hande_gripper.urdf.xacro  robotiq_hande_gripper.xacro
install/robotiq_hande_driver/include/robotiq_hande_driver/: communication.hpp  hande_gripper.hpp  hande_hardware_interface.hpp  protocol_logic.hpp  socat_manager.hpp  utils.hpp
install/robotiq_hande_driver/share/robotiq_hande_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  ros2_control_plugin.xml
install/robotiq_hande_driver/share/robotiq_hande_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robotiq_hande_driverExport-noconfig.cmake  export_robotiq_hande_driverExport.cmake  robotiq_hande_driverConfig-version.cmake  robotiq_hande_driverConfig.cmake
install/robotiq_hande_driver/share/robotiq_hande_driver/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/ur5_test/lib/ur5_test/: hand_e_server.py  move_to_coord.py  move_to_tag.py  pick_and_place.py  tag_pick_and_place.py  wrist_positioner_node.py
install/ur5_test/share/ur5_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/ur5_test/share/ur5_test/action/: MoveGripper.action  MoveGripper.idl  MoveGripper.json
install/ur5_test/share/ur5_test/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_ur5_test__rosidl_generator_cExport.cmake  export_ur5_test__rosidl_generator_cppExport.cmake  export_ur5_test__rosidl_generator_pyExport-noconfig.cmake  export_ur5_test__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_ur5_test__rosidl_typesupport_fastrtps_cExport.cmake  export_ur5_test__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  ur5_testConfig-version.cmake  ur5_testConfig.cmake  ur5_test__rosidl_typesupport_cExport-noconfig.cmake  ur5_test__rosidl_typesupport_cExport.cmake  ur5_test__rosidl_typesupport_introspection_cppExport.cmake  (+1 more)
log/: latest_build
src/robotiq_hande_driver/: .clang-format  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md
src/robotiq_hande_driver/.github/: issue_template.md  pull_request_template.md
src/robotiq_hande_driver/robotiq_hande_driver/: CHANGELOG.md  CMakeLists.txt  robotiq_hande_driver.repos  ros2_control_plugin.xml
src/robotiq_hande_driver/robotiq_hande_driver/bringup/config/: hande_controller.yaml  rviz_preview.rviz
src/robotiq_hande_driver/robotiq_hande_driver/bringup/launch/: gripper_controller_preview.launch.py
src/robotiq_hande_driver/robotiq_hande_driver/hardware/include/robotiq_hande_driver/: communication.hpp  hande_gripper.hpp  hande_hardware_interface.hpp  protocol_logic.hpp  socat_manager.hpp  utils.hpp
src/robotiq_hande_driver/robotiq_hande_driver/hardware/src/: communication.cpp  hande_gripper.cpp  hande_hardware_interface.cpp  protocol_logic.cpp  socat_manager.cpp
src/robotiq_hande_driver/robotiq_hande_driver/test/: communication_test.cpp  test_load_hw_interface.cpp
src/ur5_test/: CMakeLists.txt  README.md  package.xml
src/ur5_test/action/: MoveGripper.action
src/ur5_test/config/: ur_controllers.yaml
src/ur5_test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ur5_test/install/ur5_test/share/ur5_test/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/ur5_test/install/ur5_test/share/ur5_test/cmake/: ur5_testConfig.cmake
src/ur5_test/install/ur5_test/share/ur5_test/urdf/: ur5_hand_e.urdf.xacro
src/ur5_test/launch/: ur_hande_rsp.launch.py
src/ur5_test/log/: latest_build
src/ur5_test/scripts/: hand_e_server.py  move_to_coord.py  move_to_tag.py  pick_and_place.py  tag_pick_and_place.py  wrist_positioner_node.py
src/ur5_test/urdf/: ur5_hand_e.urdf.xacro
(+43 files in other folders)
