<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_test</name>
  <version>0.0.0</version>
  <description>UR5 with Hand-E wrist positioning control</description>
  <maintainer email="researcher@todo.todo">researcher</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Dependencies for MoveIt 2 and Python Nodes -->
  <depend>rclpy</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <!-- Execution dependency for the MoveIt Python wrapper -->
  <exec_depend>moveit_commander</exec_depend>

  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>